// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled - Props can style custom props 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "marginBottom": 4,
          "marginLeft": 4,
          "marginRight": 4,
          "marginTop": 4,
        },
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  />,
]
`;

exports[`Styled - Values Props can style custom props 1`] = `
<ActivityIndicator
  color="#ef4444"
  style={
    Array [
      Object {
        "marginBottom": 4,
        "marginLeft": 4,
        "marginRight": 4,
        "marginTop": 4,
      },
    ]
  }
/>
`;
